--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="PK8-oO-sfE">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="lpM-Kr-PQ0">
                             <connections>
-                                <segue destination="flu-uI-lxp" kind="presentation" id="JCp-VB-Nj6"/>
+                                <segue destination="flu-uI-lxp" kind="show" id="JCp-VB-Nj6"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -56,7 +56,7 @@
         <!--Add Item-->
         <scene sceneID="6pt-em-NCB">
             <objects>
-                <tableViewController title="Add Item" id="flu-uI-lxp" sceneMemberID="viewController">
+                <tableViewController title="Add Item" id="flu-uI-lxp" customClass="AddItemViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="528-NK-72F">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,6 +77,18 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Add Item" id="HrD-Jq-Em1">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="4OV-zY-DFF">
+                            <connections>
+                                <action selector="cancel" destination="flu-uI-lxp" id="1CB-mx-Wzs"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="xpI-xg-BYt">
+                            <connections>
+                                <action selector="done" destination="flu-uI-lxp" id="lam-5J-IMQ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4YO-sc-kXN" userLabel="First Responder" sceneMemberID="firstResponder"/>
