8 프로토콜 완성.  B의 내용을 A에게 보내는 방법 프로토콜 정의!    1.B에서 프로토콜 정의  A랑 관련된 액션함수 수정 2.delegate변수 선언 3. 어떤 이벤트에 대해서 B는 메세지를 보내야함 --> A랑 관련된 액션함수 프로토콜 방식에 맞게 수정 4.A에서 프로토콜 알림 -인클루드 해줌 -프로토콜 함수를 A에서 구현  5.B에게 A가 delegate	임을 알려줌- prepare	함수 구현(A에서)
결과:  B에서 추가한 할일을 나오면서 A의 셀에 추가해줌

--- a/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                     <navigationItem key="navigationItem" title="Checklists" id="PK8-oO-sfE">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="lpM-Kr-PQ0">
                             <connections>
-                                <segue destination="flu-uI-lxp" kind="show" id="JCp-VB-Nj6"/>
+                                <segue destination="flu-uI-lxp" kind="show" identifier="AddItem" id="JCp-VB-Nj6"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
